[package]
edition = "2021"
name = "bevy_ddd"
version = "0.1.0"

[dependencies]
bevy = "0.13.0"
bevy_embedded_assets = "0.10.2"
bevy_kira_audio = { version = "0.19.0", features = ["wav"] }
leafwing-input-manager = "0.13.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"

[features]
# N.b. we may need to disable the default features when building wasm.
default = ["dynamic"]
dynamic = ["bevy/dynamic_linking"]
